argus-insight-workspace-provisioner/workspace_provisioner/kubernetes/templates/nifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argus-nifi-${WORKSPACE_NAME}-headless
  namespace: ${K8S_NAMESPACE}
  labels:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/instance: ${WORKSPACE_NAME}
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https
      port: 8443
      targetPort: https
    - name: cluster
      port: 11443
      targetPort: cluster
    - name: load-balance
      port: 6342
      targetPort: load-balance
  selector:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/instance: ${WORKSPACE_NAME}
---
apiVersion: v1
kind: Service
metadata:
  name: argus-nifi-${WORKSPACE_NAME}
  namespace: ${K8S_NAMESPACE}
  labels:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/instance: ${WORKSPACE_NAME}
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/instance: ${WORKSPACE_NAME}
